[gd_scene load_steps=2 format=3 uid="uid://b2yg0ei03er3j"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_7xchd"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7xchd")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Host game"

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Join game"

[node name="IPAddress" type="LineEdit" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "IP Address"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="TestingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 128.0
grow_vertical = 0
text = "Turn off testing"

[node name="DeckButtons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimalDeckButton" type="Button" parent="DeckButtons"]
layout_mode = 2
text = "Animal Deck"

[node name="MagicDeckButton" type="Button" parent="DeckButtons"]
layout_mode = 2
text = "Magic Deck"

[node name="CurrentDeck" type="Label" parent="DeckButtons"]
layout_mode = 2
text = "Currently: Animal deck"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TestingButton" to="." method="_on_testing_button_pressed"]
[connection signal="pressed" from="DeckButtons/AnimalDeckButton" to="." method="_on_animal_deck_button_pressed"]
[connection signal="pressed" from="DeckButtons/MagicDeckButton" to="." method="_on_magic_deck_button_pressed"]
