[gd_scene load_steps=3 format=3 uid="uid://b2yg0ei03er3j"]

[ext_resource type="Script" path="res://manager/MainMenu.gd" id="1_7xchd"]
[ext_resource type="PackedScene" uid="uid://bwvclmkccbdtc" path="res://deckbuilder/DeckPicker.tscn" id="2_38ppn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_7xchd")

[node name="PromptContainer" type="CenterContainer" parent="."]
visible = false
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="MainMenuContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuContainer"]
layout_mode = 2

[node name="SinglePlayer" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="Start" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Start game"

[node name="JoinRandom" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Join Random"

[node name="HostLan" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Host LAN game"

[node name="JoinLan" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Join LAN game"

[node name="Tutorial" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="TestGame" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Testing game"

[node name="PickMPDeck" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Pick Multiplayer deck"

[node name="Exit" type="Button" parent="MainMenuContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="DeckPicker" parent="." instance=ExtResource("2_38ppn")]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 376.0
offset_top = 124.0
offset_right = 776.0
offset_bottom = 524.0
is_multiplayer_deck_picker = true

[node name="TestingButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 128.0
grow_vertical = 0
text = "Turn off testing"

[node name="YourIPLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="MainMenuContainer/VBoxContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/JoinRandom" to="." method="_on_join_random_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/HostLan" to="." method="_on_host_lan_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/JoinLan" to="." method="_on_join_lan_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/TestGame" to="." method="_on_test_game_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/PickMPDeck" to="." method="_on_pick_mp_deck_pressed"]
[connection signal="pressed" from="MainMenuContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="TestingButton" to="." method="_on_testing_button_pressed"]
